remove jpa configuration class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 server.port = 8080
 server.contextPath = /mydesWeb
-spring.datasource.url= jdbc:h2:~/test
-datasource.sampleapp.username=SA
-datasource.sampleapp.password=
-datasource.sampleapp.driverClassName=org.h2.Driver
-datasource.sampleapp.defaultSchema=
-datasource.sampleapp.maxPoolSize=10
-datasource.sampleapp.hibernate.hbm2ddl.method=create-drop
-datasource.sampleapp.hibernate.show_sql=true
-datasource.sampleapp.hibernate.format_sql=true
-datasource.sampleapp.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
