--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port = 8080
-server.contextPath = /mydesWeb
-
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+server.ssl.key-store=${WEB_KEYSTORE_PATH}
+server.ssl.key-store-password=${WEB_KEYSTORE_PASSWORD}
 
 
