--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 server.ssl.key-store=${WEB_KEYSTORE_PATH}
 server.ssl.key-store-password=${WEB_KEYSTORE_PASSWORD}
+server.ssl.key-alias=${WEB_KEYSTORE_ALIAS}
 
 
