--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port = 8080
+spring.application.name=mce-web
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-server.ssl.key-store=${WEB_KEYSTORE_PATH}
-server.ssl.key-store-password=${WEB_KEYSTORE_PASSWORD}
-server.ssl.key-alias=${WEB_KEYSTORE_ALIAS}
+#server.ssl.key-store=${WEB_KEYSTORE_PATH}
+#server.ssl.key-store-password=${WEB_KEYSTORE_PASSWORD}
+#server.ssl.key-alias=server
 
 
